---------------------------------------------------------------------------------------------------
Version: 1.0.0
Date: 8/6/25
  Features:
    - It is now possible to set which qualities a trade can use.
    - Added trade overview filters for maximum number of input and output items in trades.
    - Added trade overview filter for maximum number of trades to be shown.
        Helps with UPS if you specify enough filters to not have to search countless trades.
    - Added mod setting to change the shapes of ore patches.
  Gui:
    - Improved hex core trade UI.
    - Made the planet filter buttons in the trade overview more compact.
  Bugfixes:
    - Fixed that some coin sprites would have tooltips with non-integer values while viewing higher quality trades in hex cores.
    - Fixed that hextreme quality was not decreasing the power consumption of beacons like other qualities do.
  Changes:
    - Clicking on a GPS tag in chat no longer opens pinged hex cores.
  Ease of use:
    - Clicking on the "find trade" button in the trade overview now immediately takes your remote view to the relevant hex core and opens it up for you.
    - Output loaders of hex cores can now be clicked directly to set their filters rather than having to go through the hex core interface.
---------------------------------------------------------------------------------------------------
Version: 0.4.3
Date: 6/6/25
  Major Features:
    - Added dungeons.
  Features:
    - Added more quests and rewards.
    - Added plague rockets ammo, technology, recipe, smoke/particle effect, and catalog entry. (used by Gleba dungeon turrets)
    - Added magmatic bullets ammo, technology, recipe, special effect, and catalog entry. (used by Vulcanus dungeon turrets)
  Changes:
    - [item=rocket] and [item=explosive-rocket] are now also craftable in [entity=biochamber].
    - [item=firearm-magazine] and [item=piercing-rounds-magazine] are now also craftable in [entity=foundry].