@@ -188,6 +188,12 @@ hextorio-hex-size-aquilo=[planet=aquilo] Hex Size
 hextorio-hex-stroke-width-aquilo=[planet=aquilo] Hex Stroke Width
 hextorio-grid-rotation-mode-aquilo=[planet=aquilo] Grid Rotation Mode
 hextorio-disable-hextreme-quality=Disable Hextreme Quality
+hextorio-notifications-quest-completed=Notifications: Quest Completed
+hextorio-notifications-new-catalog-entry=Notifications: New Catalog Entry
+hextorio-notifications-item-ranked-up=Notifications: Item Ranked Up
+hextorio-notifications-extra-trade=Notifications: Extra Trade
+hextorio-notifications-interplanetary-trade=Notifications: Interplanetary Trade
+hextorio-notifications-trade-recovered=Notifications: Trade Recovered
 
 [mod-setting-description]
 hextorio-claimed-hex-tile=The tile used to pave over claimed hexes.
@@ -280,6 +286,12 @@ hextorio-hex-size-aquilo=The average diameter of the hexagons on [planet=aquilo]
 hextorio-hex-stroke-width-aquilo=The thickness of the lines that separate hexes by [tile=ammoniacal-ocean] on [planet=aquilo]. Increasing this decreases hex size.
 hextorio-grid-rotation-mode-aquilo=How hex grids are rotated on [planet=aquilo]. Affects the aesthetic more than gameplay difficulty.
 hextorio-disable-hextreme-quality=This mod adds a sixth quality tier. Some features are specifically designed around it, so only disable this if it's absolutely necessary.
+hextorio-notifications-quest-completed=Get notifications in chat when a quest gets completed.
+hextorio-notifications-new-catalog-entry=Get notifications in chat when a new item is discovered in the catalog.
+hextorio-notifications-item-ranked-up=Get notifications in chat when any item is ranked up.
+hextorio-notifications-extra-trade=Get notifications in chat when a [img=rank-2] bronze rank item caused a hex core to have an extra trade for it.
+hextorio-notifications-interplanetary-trade=Get notifications in chat when a [img=rank-3] silver rank item caused a hex core to have an [color=cyan]interplanetary trade[.color] for it.
+hextorio-notifications-trade-recovered=Get notifications in chat when a [img=rank-4] gold rank item caused a trade that would have been deleted to instead be transferred to another hex core.
 
 [string-mod-setting]
 hextorio-grid-rotation-mode-nauvis-random=Random
