@@ -5,3 +5,4 @@ require "settings.item_values"
 require "settings.trades"
 require "settings.item_ranks"
 require "settings.misc"
+require "settings.notifications"
