@@ -1,0 +1,45 @@
+
+data:extend({
+    {
+        type = "bool-setting",
+        name = "hextorio-notifications-quest-completed",
+        setting_type = "runtime-per-user",
+        default_value = true,
+        order = "a[notification]-c[quest-completed]",
+    },
+    {
+        type = "bool-setting",
+        name = "hextorio-notifications-new-catalog-entry",
+        setting_type = "runtime-per-user",
+        default_value = true,
+        order = "a[notification]-e[new-catalog-entry]",
+    },
+    {
+        type = "bool-setting",
+        name = "hextorio-notifications-item-ranked-up",
+        setting_type = "runtime-per-user",
+        default_value = true,
+        order = "a[notification]-g[item-ranked-up]",
+    },
+    {
+        type = "bool-setting",
+        name = "hextorio-notifications-extra-trade",
+        setting_type = "runtime-per-user",
+        default_value = true,
+        order = "a[notification]-i[extra-trade]",
+    },
+    {
+        type = "bool-setting",
+        name = "hextorio-notifications-interplanetary-trade",
+        setting_type = "runtime-per-user",
+        default_value = true,
+        order = "a[notification]-i[interplanetary-trade]",
+    },
+    {
+        type = "bool-setting",
+        name = "hextorio-notifications-trade-recovered",
+        setting_type = "runtime-per-user",
+        default_value = true,
+        order = "a[notification]-i[trade-recovered]",
+    },
+})
